# elisym-client

./: .gitignore  Cargo.toml  GUIDE.md  README.md
.github/workflows/: ci.yml  release.yml
examples/: test_customer.rs
skills/general-assistant/: SKILL.md
skills/youtube-summary/: SKILL.md
skills/youtube-summary/scripts/: summarize.py
src/: agent.rs  banner.rs  cli.rs  config.rs  constants.rs  customer.rs  ledger.rs  main.rs  protocol.rs  runtime.rs  util.rs
src/cli/: agent.rs  args.rs  config.rs  crypto.rs  customer.rs  dashboard.rs  error.rs  global_config.rs  llm.rs  mod.rs  protocol.rs
src/skill/: llm_skill.rs  loader.rs  mod.rs  script_skill.rs
src/transport/: mod.rs  nostr.rs
src/tui/: event.rs  mod.rs  ui.rs
